<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Admission Guide </string>
    <string name="welcome">Welcome Back</string>
    <string name="sign_in">Sign in to continue</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="chatbot">Chatbot</string>
    <string name="home">Home</string>
    <string name="shortcut_short_label_chatbot">Chatbot</string>
    <string name="shortcut_long_label_chatbot">Start a Chat</string>
    <string name="shortcut_disabled_message_chatbot">The chatbot feature is currently unavailable.</string>
    <string name="shortcut_short_label_news">News</string>
    <string name="shortcut_long_label_news">View Latest News</string>
    <string name="shortcut_disabled_message_news">The news feature is currently unavailable.</string>
</resources>